2005-03-27  Karl Berry  <karl@gnu.org>

	* util/texinfo.dtd: remove -- and ^L from inside comments, since
	apparently XML cannot handle them.
	Report from Torsten, bronger@physik.rwth-aachen.de.

	* configure.ac (AC_INIT): quote address.
	(AC_PREREQ): move to after AC_INIT, per current recommendation.

2005-03-25  Stepan Kasal  <kasal@ucw.cz>

	* doc/Makefile.am: help2man should use the native binaries in the
	  build tree, not the one found on $PATH; thanks to Thomas Schwinge
	  for reporting the problem.
	  The rules also make sure the binaries are up-to-date, and generate
	  the man pages in the source tree, not build tree.
	  There is no need to depend on MAINTAINER_MODE, because help2man is
	  handled by the `missing' script.
	(INSTALL_INFO): Comment out; it's not used.
	* Makefile.am (distcleancheck_listfiles): Removed this variable, it
	  doesn't seem to be needed.
	* configure.ac (AC_INIT): Add our bug report address.

2005-03-21  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (allowcodebreaks): new node.
	* makeinfo/cmds.c: define @allowcodebreaks (as a no-op).
	* doc/texinfo.tex (\allowcodebreaks): new macro.
	(\code): use it.
	(\realunder, \keywordtrue, \keywordfalse, \ifallowcodebreaks):
	helpers.

2005-03-15  gettextize  <bug-gnu-gettext@gnu.org>

	* configure.ac (AM_GNU_GETTEXT_VERSION): Bump to 0.14.3.

2005-03-12  gettextize  <bug-gnu-gettext@gnu.org>

	* configure.ac (AM_GNU_GETTEXT_VERSION): Bump to 0.14.2.

2005-03-12  Karl Berry  <karl@gnu.org>

	* process_css_file: fclose the file when we're through with it,
	to avoid fd leaks.
	From: Matthias Kilian <kili@outback.escape.de>,
	11 Mar 2005 19:42:27 +0100.

2005-03-08  Keith Marshall  <keith.d.marshall@ntlworld.com>

	* makeinfo/tests/no-headers: ($nulldev): new variable.
	  set it to `/dev/null' normally, but to `nul' on Win32,
	  so Cygwin doesn't fail this test, in `make check'.

2005-03-08  Karl Berry  <karl@gnu.org>

	* info/filesys.h (DEFAULT_INFOPATH): make . first in the path,